Update timer, fix contrast issue from pa11y

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,3 +54,7 @@ hr.divider {
     font-weight: bold;
     color: white;
 }
+
+body {
+    color: #828282;
+}
